test/spec_vectors/i32/fail/module_36.wat
(module (func $type-binary-2nd-operand-empty-in-return (return (i32.const 0) (i32.add)) (drop)))